<resources>
    <string name="app_name">Make My Shopping List!</string>
    <string name="action_settings">Settings</string>
    <string name="help">Help</string>
    <string name="title_activity_add_running_out_of_event">Run out of item</string>
    <string name="add_item_which_you_run_out_of">Add</string>
    <string name="item_name">Item name</string>
    <string name="all">All</string>
    <string name="thisWeek">Week</string>
    <string name="thisMonth">Month</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="archive">Archive</string>
    <string name="empty">Empty</string>
    <string name="undo">Undo</string>
    <string name="itemsMarkedAsBought">Items marked as bought</string>
    <string name="itemMarkedAsBought">Item marked as bought</string>
    <string name="itemsArchived">Items archived</string>
    <string name="itemArchived">Item archived</string>
    <string name="pressBackAgainToExit">Press Back again to Exit</string>
    <string name="please_fill_the_following_fields_with_names_of_the_products_which_you_bought_in_past_seven_days">Please fill the following fields with names of the products which you bought in past seven days</string>
    <string name="ex_bread">ex. Bread</string>
    <string name="ex_butter">ex. Butter</string>
    <string name="ex_milk">ex. Milk</string>
    <string name="ex_sugar">ex. Sugar</string>
    <string name="ex_flour">ex. Flour</string>
    <string name="next_step">Next step</string>
    <string name="please_fill_the_following_fields_with_names_of_the_products_which_you_bought_in_past_thirty_days">Please fill the following fields with names of the products which you bought in past thirty days</string>
    <string name="ex_soap">ex. Soap</string>
    <string name="ex_washing_up_liquid">ex. Washing-up liquid</string>
    <string name="ex_washing_powder">ex. Washing powder</string>
    <string name="ex_baking_paper">ex. Baking paper</string>
    <string name="ex_baking_soda">ex. Baking soda</string>
    <string name="nameIsEmpty">Name is empty</string>
    <string name="itemAdded">Item added. Do you want to add another item?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="errorOccuredWhileAdding">Error occured when adding. Please try again</string>
    <string name="fillAnyFields">Please fill any fields to be able to use the application and get the predictions</string>
    <string name="itemsMarkedAsEmpty">Items marked as empty.</string>
    <string name="itemMarkedAsEmpty">Item marked as empty.</string>
    <string name="startFragmentTitle">Welcome in Make My Shopping List!</string>
    <string name="startFragmentMessage">Please use the following wizard to provide the items you regularly buy</string>
    <string name="startFragmentButton">Next</string>
    <string name="all_items_have_been_archived_use_add_button_below_to_add_new_items">All items in this section have been archived - use add button below to add new items.</string>
    <string name="whenAddedFirstTime">Prediction for the product will be calculated after adding it more than two times</string>
    <string name="back">Back</string>
    <string name="finish">Finish</string>
    <string name="markItemAsEmpty">Mark item as empty</string>
    <string name="markItemAsBought">Mark item as bought</string>
    <string name="markItemAsArchived">Mark item as archived</string>
    <string name="faq">Frequently Asked Questions</string>
    <string name="q1_noitemadded">I have just add new empty item but it isn\'t shown on the predictions list.</string>
    <string name="a1_noitemadded">The prediction will appear after the empty item will be added for the second time. This allows to avoid the situation when item which you have bought only once is shown on the predictions list.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login">Login</string>
    <string name="sign_out">Sign out</string>
    <string name="disconnect">Disconnect</string>
    <string name="title_text">Text</string>
    <string name="loading">Loading</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="zzz">ZZZ</string>
</resources>
