<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".main.MainActivity">
    <item
        android:id="@+id/label_counter"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_empty"
        android:icon="@drawable/ic_sentiment_dissatisfied_white_24dp"
        android:title="@string/empty"
        android:visible="false"
        android:onClick="markAsEmpty"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_shopping_cart_white_24dp"
        android:title="@string/done"
        android:visible="false"
        android:onClick="markAsBought"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_archive"
        android:icon="@drawable/ic_archive_white_24dp"
        android:title="@string/archive"
        android:visible="false"
        android:onClick="markAsArchived"
        app:showAsAction="always" />

    <item
        android:id="@+id/help"
        android:title="@string/help"
        app:showAsAction="never" />

    <item
        android:id="@+id/login"
        android:title="@string/login"
        app:showAsAction="never" />

    <item
        android:id="@+id/zzz"
        android:title="@string/zzz"
        app:showAsAction="never" />
</menu>
