<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/please_fill_the_following_fields_with_names_of_the_products_which_you_bought_in_past_seven_days"
        android:id="@+id/textView"
        android:padding="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/productName1"
        android:layout_margin="10dp"
        android:hint="@string/ex_bread"
        android:singleLine="false" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/productName2"
        android:layout_margin="10dp"
        android:hint="@string/ex_butter" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/productName3"
        android:layout_margin="10dp"
        android:hint="@string/ex_milk" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/productName4"
        android:layout_margin="10dp"
        android:hint="@string/ex_sugar" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/productName5"
        android:layout_margin="10dp"
        android:hint="@string/ex_flour" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/next_step"
        android:id="@+id/nextStep"
        android:layout_margin="10dp" />
</LinearLayout>