<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/startFragmentTitle"
        android:id="@+id/textView2"
        android:layout_margin="20dp"
        android:gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="311dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/startFragmentMessage"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:gravity="center" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/startFragmentButton"
        android:id="@+id/startWizard"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp" />

</LinearLayout>
