<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.programistka.makemyshoppinglist.HelpActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Znaczenie przycisków"
        android:id="@+id/buttonsHelp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:layout_marginBottom="20dp" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_below="@+id/buttonsHelp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emptyButton"
        android:layout_margin="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imgMarkItemAsEmpty"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/ic_sentiment_dissatisfied_white_24dp"
            android:background="#009688" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/markItemAsEmpty"
            android:id="@+id/markItemAsEmpty"
            android:layout_toRightOf="@id/imgMarkItemAsEmpty"
            android:layout_marginLeft="10dp" />

    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_below="@+id/emptyButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/boughtButton"
        android:layout_margin="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imgMarkItemAsBought"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/ic_shopping_cart_white_24dp"
            android:background="#009688" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/markItemAsBought"
            android:id="@+id/markItemAsBought"
            android:layout_toRightOf="@id/imgMarkItemAsBought"
            android:layout_marginLeft="10dp" />

    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_below="@+id/boughtButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/archiveButton"
        android:layout_margin="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imgMarkItemAsArchived"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="#009688"
            android:src="@drawable/ic_archive_white_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/markItemAsArchived"
            android:id="@+id/markItemAsArchived"
            android:layout_toRightOf="@+id/imgMarkItemAsArchived"
            android:layout_marginLeft="10dp" />

    </RelativeLayout>

    <TextView
        android:layout_below="@+id/archiveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/faq"
        android:id="@+id/faq"
        android:layout_alignParentLeft="true"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/faq"
        android:textStyle="bold"
        android:text="@string/q1_noitemadded"
        android:id="@+id/q1_noitemadded" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/q1_noitemadded"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/a1_noitemadded"
        android:id="@+id/a1_noitemadded" />

</RelativeLayout>
